--- a/_posts/2018-12-01-travel.md
+++ b/_posts/2018-12-01-travel.md
@@ -12,7 +12,7 @@ I love to travel and experience new places, foods, and people. I also love the o
 
 **Redwood National and State Parks (November 2018)**
 
-Spent a rainy Thanksgiving weekend camping at Redwood National and State Parks in Northern CA. We arrived on Thursday evening and had pre-prepared our Thanksgiving dinner so we could heat it on the camp stove under the canopy. Friday was rainy, so there were very few people out even on the main park footpaths, so we had the main attractions to ourselves. On Saturday, the sun came out so we did a more ambitious hike, a 10 mile loop through Elk Prarie Redwoods State Park.
+Spent a rainy Thanksgiving weekend camping at Redwood National and State Parks in Northern CA. We arrived on Thursday evening and had pre-prepared our Thanksgiving dinner so we could heat it on the camp stove under the canopy. Because Friday was rainy, there were very few people out even on the main park footpaths so we had the main attractions to ourselves. On Saturday, the sun came out so we did a more ambitious hike, a 10 mile loop through Elk Prarie Redwoods State Park.
 
 <img src="/images/2018-11_redwoods.jpg" alt="Nathan, Carolyn, and I atop Cloud's Rest" width="500" />
 
