spelled yosemite wrong

--- a/_posts/2018-12-01-travel.md
+++ b/_posts/2018-12-01-travel.md
@@ -26,7 +26,7 @@ We drove up to Lake Tahoe for a night and day to escape the smokey air in the Ba
   <img src="/images/2018-11_eagle_lake2.jpg" alt="The crew: Carolyn, Kathy, Eric, and Franziska" width="350" />
 </p>
 
-**Yostemite National Park (October 2018)**
+**Yosemite National Park (October 2018)**
 
 I camped for two nights near Yosemite National Park in order to hike Cloud's Rest. The weather was perfect - cold in the morning but sunny and mild during the day. The hike wasn't too strenuous but the altitude definitely affected me.
 
