updates, typos, additions

--- a/_posts/2018-12-01-travel.md
+++ b/_posts/2018-12-01-travel.md
@@ -50,4 +50,10 @@ I traveled to Manchester, UK for the 15th International Exchange Meeting on Part
 * Pinnacles National Park (December 2017)
 * Nashville, TN (November 2017)
 * Above & Beyond Group Therapy 250 at the Gorge Amphitheatre, WA (September 2017)
+* Seattle, WA (August 2017)
 * Lassen Volcanic National Park (August 2017)
+* Darby Canyon Wind Cave, ID (July 2017)
+* Charlotte NC (for ANS IHLRWM; April 2017)
+* Montreal, Canada (March 2017)
+* Japan (for the 6th International Symposium and Seminar on Global Nuclear Human Resource Development for Safety, Security, and Safeguards; February, 2017).
+* King's Canyon National Park (July, 2016)
