reduced image file size

--- a/_posts/2018-12-01-travel.md
+++ b/_posts/2018-12-01-travel.md
@@ -37,7 +37,7 @@ I camped for two nights near Yosemite National Park in order to hike Cloud's Res
 I traveled to Manchester, UK for the 15th International Exchange Meeting on Partitioning and Transmutation. I presented a poster, titled "Impact of partitioning and transmutation on the back end of the fuel cycle". After the conference, I met up with some good friends to travel around the UK, since I'd never been outside of London. We spent a night in the Peak District and hiked Stannedge Edge, visited Bristol for a night out, then returned to London. There I met up with Carolyn for a whirlwind weekend before heading home.
 
 <p float="left">
-  <img src="/images/2018-10_stannedge_edge.png" alt="Mark and Richard walking the edge" width="350" />
+  <img src="/images/2018-10_stannedge_edge.jpg" alt="Mark and Richard walking the edge" width="350" />
 
   <img src="/images/2018-10_london.jpg" alt="Carolyn and I (and a sad abandoned umbrella) at Tower Bridge" width="350" />
 </p>
