updated current research blurb

--- a/_posts/2018-12-02-about.md
+++ b/_posts/2018-12-02-about.md
@@ -6,7 +6,7 @@ datetime:   2018-10-23
 categories: posts
 ---
 
-Thanks for visiting my personal website! I am pursuing my PhD in nuclear engineering at the University of California, Berkeley. This website hosts information about my research and personal adventures. Feel free to reach out if you have any questions for me or are interested in my research or potential collaboration.
+Thanks for visiting my personal website! I am a postdoctoral appointee in the Nuclear Science and Engineering Division at Argonne National Laboratory. This website hosts information about my research and personal adventures. Feel free to reach out if you have any questions for me or are interested in my research or potential collaboration.
 
 
 **My name**
@@ -15,11 +15,11 @@ My name is Milos: formally, it's spelled Miloš, phonetically, it's "mil-ish" ("
 
 **Research**
 
-At the moment, I am working on analysis of nuclear waste characteristics, management strategies, and disposal performance for different nuclear energy fuel cycles. Previously, my research was on criticality safety assessments for geological repositories.
+Currently, I am developing and updating the thermal hydraulics analysis software used at Argonne National Laboratory in support of the Versatile Test Reactor core design. For my PhD, I performed analysis of nuclear waste characteristics, management strategies, and disposal performance for different nuclear energy fuel cycles. Previously, my research was on criticality safety assessments for geological repositories.
 
 **Education**
 
-* University of California, Berkeley: PhD, Nuclear Engineering (2016 - present)
+* University of California, Berkeley: PhD, Nuclear Engineering (2016 - 2019)
 * University of California, Berkeley: MS, Nuclear Engineering (2014 - 2016)
 * University of Connecticut: BS, Chemical Engineering (2010 - 2014)
 
