updated current research blurb

--- a/_posts/2018-12-02-about.md
+++ b/_posts/2018-12-02-about.md
@@ -25,7 +25,7 @@ Currently, I am developing and updating the thermal hydraulics analysis software
 
 **Personal**
 
-In my free time you may find me eating, skiing, hiking, and travel (see the "Adventures" page). I also enjoy weightlifting; my current powerlifting personal bests are 425 lb. squat, 300 lb. bench press, and 525 lb. deadlift. I've also volunteered for a week during the summers of 2017 and 2018 as a counselor at the [Painted Turtle Camp](http://thepaintedturtle.org) in Lake Hughes, CA. Hopefully more on those things here soon.
+In my free time you may find me eating, skiing, hiking, exercising, or traveling (see the "Adventures" page). I've also volunteered for a week during the summers of 2017 and 2018 as a counselor at the [Painted Turtle Camp](http://thepaintedturtle.org) in Lake Hughes, CA. Hopefully more on those things here soon.
 
 <p align="center">
 <img align="center" src="/images/shadow.jpg" alt="Peace from the Channel Islands, CA (2018)" width="200"/>
